<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".table_layout">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="232dp"
            android:layout_span="2"
            android:src="@tools:sample/avatars"
            tools:srcCompat="@drawable/person" />

    </TableRow>

    <TableRow
        android:layout_width="510dp"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/view2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextText6"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Enter Your Name"
            android:inputType="text|textPersonName" />
    </TableRow>

    <TableRow

        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:text="@string/view3" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_height="49dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Enter Your Phone Number"
            android:inputType="phone" />

    </TableRow>

    <TableRow
        android:layout_marginTop="25dp"
        >

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textSize="20sp"
            android:text="@string/view4" />

        <EditText
            android:id="@+id/editTextTextPostalAddress"
            android:layout_height="49dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:hint="Enter Your Address"
            android:inputType="textPostalAddress" />

    </TableRow>

    <TableRow
        android:layout_marginTop="35dp"
        android:gravity="center">

        <Button
            android:id="@+id/button3"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="SUBMIT" />
    </TableRow>
</TableLayout>